--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ nav {
   width: 85%;
   display: flex;
   flex-direction: column;
-  margin: 30px auto 0 auto;
+  margin: 50px auto 0 auto;
 }
 
 h2 {
@@ -137,18 +137,96 @@ h2 {
 }
 
 .items {
-  width: 23%;
+  width: 24%;
   margin: 5px 5px 5px 5px;
-  background-color: green;
-  height: 300px;
+  /* background-color: green; */
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+}
+
+.items img {
+  background-color: black;
+  width: 100%;
+  height: 50%;
 }
 
 .items p {
+  margin: 10px 0 10px 0;
   color: black;
+  font-size: 15px;
+  font-weight: 700;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .items .time span {
   color: gray;
+  font-size: 13px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.section3 {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  margin: 50px auto 0 auto;
+  /* background-color: greenyellow; */
+}
+
+.section3 .addlinks {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.section3 .addlinks ul {
+  list-style: none;
+  display: flex;
+  margin-right: 10px;
+}
+
+.section3 .addlinks ul li {
+  margin: 10px;
+  color: #f42;
+  padding-right: 10px;
+  border-right: 1px solid  #f42;
+}
+
+.section3 .addlinks ul li:last-child {
+  border-right: none;
+}
+
+.section3 a {
+  text-decoration: none;
+}
+
+.latestfundings {
+  display: flex;
+}
+
+.fundings {
+  width: 24%;
+  margin: 5px 5px 5px 5px;
+  background-color: rgb(228, 102, 18);
+  height: 300px;
+}
+
+.section4 {
+  width: 85%;
+  display: flex;
+  margin: 50px auto 0 auto;
+  background-color: rgb(90, 114, 194);
+}
+
+.section4 article {
+  width: 30%;
+  height: 400px;
+  background-color: brown;
+}
+
+.section3 .addlinks ul li:hover {
+  color: black;
 }
 
 .items .time strong:hover {
