--- a/styles.css
+++ b/styles.css
@@ -308,14 +308,40 @@ h2 {
 }
 
 .section4 article {
-  width: 30%;
+  width: 31%;
   height: 400px;
   background-color: brown;
 }
 
-.article-image img{
-  width: 50px;
-  height: 50px;
+.gradient {
+  height: 20%;
+  background-color: blue;
+  margin-top: 20px;
+}
+
+.disney {
+  height: 70px;
+  background-color: green;
+  display: flex;
+}
+
+.disney-p {
+  width: 70%;
+}
+
+.disney img {
+  width: 30%;
+  height:100%;
+  margin-left: 5em;
+}
+
+.disney p {
+  width:70%;
+}
+
+.list {
+  height:20%;
+  background-color: yellow;
 }
 
 .section3 .addlinks ul li:hover {
