--- a/styles.css
+++ b/styles.css
@@ -304,44 +304,105 @@ h2 {
   width: 85%;
   display: flex;
   margin: 50px auto 0 auto;
-  background-color: rgb(90, 114, 194);
+  /* background-color: rgb(98, 105, 126); */
+}
+
+.article-image {
+  height: 800px;
 }
 
 .section4 article {
   width: 31%;
   height: 400px;
-  background-color: brown;
 }
 
 .gradient {
-  height: 20%;
-  background-color: blue;
+  height: 30%;
+  /* background-color: blue; */
   margin-top: 20px;
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/WHO-COvid-368x276.jpg");
+  width: 100%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.gradient-background {
+  background: rgba(0, 0, 0, 0.05) url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/image-gradient.png") no-repeat;
+  background-size: 100% 100%;
+  width:100%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+}
+
+.gradient-background a {
+  text-decoration: none;
+  color:white;
+  font-weight: 600;
+  font-size: 21px;
+}
+.gradient-background p {
+  margin-left: 10px;
+}
+  
 }
 
 .disney {
-  height: 70px;
-  background-color: green;
-  display: flex;
+  height: 100px;
+  background-color: pink;
 }
 
-.disney-p {
-  width: 70%;
+.disney-c {
+  color: red;
+  text-decoration: none;
+  margin-top: 3em;
 }
 
-.disney img {
+.disney-a {
+  width: 60%;
+  margin-top: 10px;
+  margin-left: 1em;
+}
+
+.disney-b {
   width: 30%;
-  height:100%;
-  margin-left: 5em;
+  height: 100%;
+  float: right;
+  margin-top: -4em;
 }
 
 .disney p {
-  width:70%;
+  margin-left: 1em;
+}
+
+.disney img {
+  width: 100%;
+  height:100%;
+  /* margin-left: 10em; */
+  float: right;
 }
 
 .list {
-  height:20%;
-  background-color: yellow;
+  height:300px;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
+  line-height: 30px;
+}
+
+.list li {
+  margin-left: 20px;
+  color: grey;
+}
+
+.list a {
+  text-decoration: none;
+}
+
+.list hr {
+  color: grey;
 }
 
 .section3 .addlinks ul li:hover {
