--- a/styles.css
+++ b/styles.css
@@ -265,18 +265,37 @@ h2 {
   height: 90px;
   background-color: whitesmoke;
   line-height: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  justify-content: center;
+  line-height: 1.5em;
 }
 
-.fund3 i{
-  margin-left:1em;
-  margin-top: 1em;
+.fund6{
+  /* margin-left:1em;
+  margin-top: 1em; */
+  display: flex; 
+  margin-left: 20px;
   color: black;
 }
 
-.fund3 p {
-  margin-left:3em;
-  margin-top: -0.8em;
+.fund7 {
+  /* margin-left:3em;
+  margin-top: -0.8em; */
+  display:flex;
   color: grey;
+  margin-left: 20px;
+}
+
+.fund3 i {
+  color: black;
+}
+
+.fund6 p, 
+.fund7 p {
+  color: grey;
+  margin-left: 20px;
 }
 
 .fund3 p:hover {
@@ -287,6 +306,9 @@ h2 {
   height: 90px;
   background-color: whitesmoke;
   border-top: 1px solid pink;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .fund4 small {
@@ -295,7 +317,6 @@ h2 {
 
 .fund4 p {
   margin-left: 10px;
-  margin-top: 15px;
   color: #555;
   font-size: 15px;
 }
@@ -356,7 +377,7 @@ h2 {
   height:100%;
   display: flex;
   flex-direction: column;
-  align-items: baseline;
+  justify-content: space-between;
 }
 
 .gradient-background a {
@@ -376,7 +397,8 @@ h2 {
 
 .gradient-list {
   font-size: 22px;
-  margin-top: 5em;
+  display:flex;
+  flex-direction: column;
 }
 
 .gradient-list p {
@@ -407,12 +429,8 @@ h2 {
 .disney {
   height: 100px;
   background-color: rgb(238, 208, 212);
-}
-
-.disney-c {
-  color: red;
-  text-decoration: none;
-  margin-top: 3em;
+  display: flex;
+  justify-content: space-between;
 }
 
 .disney ul {
@@ -420,7 +438,7 @@ h2 {
   margin-left: 0.5em;
   font-size: 15px;
   list-style-type: none;
-  padding-top: 10px;
+  margin-top: 10px;
 }
 
 .disney ul a {
@@ -437,7 +455,6 @@ h2 {
   width:35%;
   height: 100%;
   float: right;
-  margin-top: -4em;
 }
 
 .disney p {
@@ -449,7 +466,6 @@ h2 {
   height:100%;
   /* margin-left: 10em; */
   float: right;
-  margin-top: -0.9em;
 }
 
 .list {
