--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ nav {
   display: flex;
   width: 100%;
   height: 400px;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .banner {
