--- a/styles.css
+++ b/styles.css
@@ -165,8 +165,7 @@ nav {
 
 .banner-side {
   width: 35%;
-  height: 99%;
-  margin: 2px;
+  height: 100%;
 }
 
 .banner-side .upper-side {
@@ -188,16 +187,9 @@ nav {
   width: 100%;
   height: 49%;
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/08/bitcoin_today-header_bitcoin_today-796x419.jpg");
-  margin: 2px;
+  margin: 2px 2px 0 2px;
   background-size: 100% 100%;
 }
-/* 
-.banner-side .side {
-  width: 100%;
-  height: 49%;
-  background-color: rgb(230, 131, 1);
-  margin: 2px;
-} */
 
 .section2 {
   width: 85%;
