validate HTML and Liter error

--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ nav .logo {
   width: 100%;
   height: 49%;
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/stay-fit-796x417.png");
-  margin: 2px;
+  margin: 2px 2px 0 0;
   background-size: 100% 100%;
 }
 
@@ -324,7 +324,7 @@ nav .logo {
   width: 100%;
   height: 49%;
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/08/bitcoin_today-header_bitcoin_today-796x419.jpg");
-  margin: 2px 2px 0 2px;
+  margin: 2px 2px 0 0;
   background-size: 100% 100%;
 }
 
