--- a/styles.css
+++ b/styles.css
@@ -744,6 +744,14 @@ h2 {
   font-size: 13px;
 }
 
+.listss {
+  display: inline-flex;
+  width: 500px;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+
 .section5 .items img:hover {
   cursor: pointer;
 }
@@ -866,13 +874,6 @@ h2:hover {
   .latestfundings {
     display: flex;
     flex-direction: column;
-  }
-
-  .foot2 ul {
-    display: inline-flex;
-    width: 400px;
-    justify-content: space-evenly;
-    list-style-type: none;
   }
 
   .section3 .addlinks ul {
