--- a/styles.css
+++ b/styles.css
@@ -491,6 +491,10 @@ h2 {
   margin-left: 20px;
 }
 
+.fund3 div{
+  margin-bottom: 10px;
+}
+
 .fund3 i {
   color: black;
 }
@@ -699,7 +703,7 @@ h2 {
 
 .footer1 {
   height: 150px;
-  background-color: transparent;
+  background-color: rgb(14, 13, 13);
   display: flex;
   align-items: center;
   justify-content: center;
